--- a/Day 9 ( Events in Javascript )/index.html
+++ b/Day 9 ( Events in Javascript )/index.html
@@ -7,7 +7,8 @@
     <script src="index.js"></script>
 </head>
 <body>
-    div class="container">
+    <!-- Create a webpage to show bikes (or object of your choice) using image tag and change it's source on button click . -->
+    <div class="container">
         <h1> <span> 🏍</span> MY Favourite bikes <span> 🏍</span></h1>
         <img src="mt-img.webp" alt="mt-15-img" height="150px" id="bike">
         <div class="btn-container">
