added javascript to used basic some calculatiions

--- a/Day 10 ( Events Part-2 (Add Two Numbers App )/index.html
+++ b/Day 10 ( Events Part-2 (Add Two Numbers App )/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./index.css">
+        <script src="./index.js"></script>
     <style>
         .calcy-container {
             display: flex;
