roller dice card created

--- a/Day 11 Dice Roller App/index.html
+++ b/Day 11 Dice Roller App/index.html
@@ -7,6 +7,13 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    
+    <div class="dice-roller-container">
+        <img src="1.png" alt="" class="dice-roller-img" id="dice" onclick="roll()">
+        <h1 class="dice-text" id="dice-roller-text">0</h1>
+        <button class="btn-roll" onclick="roll()">Roll</button>
+    </div>
+    <div class="github-co">
+        <a href="https://github.com/saurabhjaykar1603">https://github.com/saurabhjaykar1603</a>
+    </div>
 </body>
 </html>
