love calcy using if-else

--- a/Day 25 Love Calculator/love.html
+++ b/Day 25 Love Calculator/love.html
@@ -3,7 +3,7 @@
 <head>
    
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="scrip.js"></script>
 </head>
 <body>
     
